# adventofcode2024

./: .gitignore  README.md  common.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day09.py  new.py  pyproject.toml
utils/: aoc.py  pyproject.toml
