[project]
name = "adventofcode2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "utils",
]

[tool.mypy]
strict = true
files = ["*.py", "utils/aoc.py"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.14.1",
    "pytest>=8.3.2",
]

[tool.uv.sources]
utils = { path = "utils", editable = true }
