[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "utils"
version = "0.0.1"
description = "Utils for advent of code. Exact copy of https://github.com/anthonywritescode/aoc2015/tree/main/support"


[tool.setuptools]
py-modules = ["aoc"]


[project.scripts]
download = "aoc:download_input"
submit = "aoc:submit_solution"
